# f

./: .gitignore  README.md  pyproject.toml
.template/: LICENSE  README.md
.template/.github/: CODEOWNERS  CONTRIBUTING.md
.template/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.template/.github/PULL_REQUEST_TEMPLATE/: pull_request.md
doc/: user.md
f/: __init__.py  main.py
f/mods/: conf_.py  db_.py  dspec.py  dspec_.py  entity_.py  err_.py  func.py  helper_.py  meta.py  meta_.py  op.py  op_.py  spec.py  spec_.py  type.py  type_.py  update_.py
f/mods/entities/: dspec_.py  op_.py  spec_.py  type_.py
f/mods/methods/: get_.py  info_.py  init_.py  search_.py  update_.py
safe/: __init__.py  main.py
